[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
simulation = { path = "../simulation" }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
